--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,14 +9,17 @@ description = "A client to manage innernet network interfaces."
 edition = "2021"
 homepage = "https://github.com/tonarino/innernet"
 license = "MIT"
-name = "client"
+name = "innernet-client"
 publish = false
 readme = "README.md"
 repository = "https://github.com/tonarino/innernet"
 version = "1.6.1"
 
+[lib]
+path = "src/lib.rs"
+
 [[bin]]
-name = "innernet"
+name = "innernet-client"
 path = "src/main.rs"
 
 [dependencies]
